@@ -24,7 +24,7 @@ BEGIN
       VALUE "FileDescription",		"Library to provide cross-platform C error functions\0"
       VALUE "FileVersion",		"@VERSION@" "\0"
       VALUE "InternalName",		"libcerror.dll\0"
-      VALUE "LegalCopyright",		"(c) 2008-2012 Joachim Metz <joachim.metz@gmail.com>\0"
+      VALUE "LegalCopyright",		"(c) 2008-2013 Joachim Metz <joachim.metz@gmail.com>\0"
       VALUE "OriginalFilename",		"libcerror.dll\0"
       VALUE "ProductName",		"libcerror\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
